--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,11 +1,20 @@
+env_scripts = ['''
+#!@duckscript
+if eq os_family windows
+  set_env PYTHON_EXE "${WORKSPACE}\\py39\\python.exe"
+  set_env PYSIDE2_RCC_EXE "${WORKSPACE}\\py39\\Lib\\site-packages\\PySide2\\rcc.exe"
+else
+  set_env PYTHON_EXE "${WORKSPACE}/py39/bin/python3"
+  set_env PYSIDE2_RCC_EXE "${WORKSPACE}/py39/bin/pyside2-rcc"
+end
+''']
+
 [config]
 default_to_workspace = false
 init_task = "init"
 
 [env]
 WORKSPACE = "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}"
-PYTHON_EXE = { source = "${CARGO_MAKE_RUST_TARGET_OS}", mapping = { linux = "${WORKSPACE}/py39/bin/python3", macos = "${WORKSPACE}/py39/bin/python3", windows = "${WORKSPACE}\\py39\\python.exe" } }
-PYSIDE2_RCC_EXE = { source = "${CARGO_MAKE_RUST_TARGET_OS}", mapping = { linux = "${WORKSPACE}/py39/bin/pyside2-rcc", macos = "${WORKSPACE}/py39/bin/pyside2-rcc", windows = "${WORKSPACE}\\py39\\Lib\\site-packages\\PySide2\\rcc.exe" } }
 
 # Two proposed methods of simplifying path globbing # https://github.com/sagiegurari/cargo-make/issues/542 # https://github.com/sagiegurari/cargo-make/issues/543
 [tasks.set-qml-files]
