--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -231,12 +231,13 @@ jobs:
                 ruby-dev \
                 rubygems \
                 build-essential \
-                libudev-dev
+                libudev-dev \
+                fd-find
               sudo gem install --no-document fpm
           elif [ "$RUNNER_OS" == "macOS" ]; then
-              brew install capnp llvm
+              brew install capnp llvm fd
           elif [ "$RUNNER_OS" == "Windows" ]; then
-              choco install capnproto nsis
+              choco install capnproto nsis fd
           fi
 
       - name: Install stable Rust
