NetworkInfo table finally showing up.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -133,9 +133,7 @@ args = [
 ]
 
 [tasks.qml-run]
-dependencies = [
-  "generate-resources",
-]
+dependencies = ["generate-resources"]
 run_task = "start-console"
 
 [tasks.run]
