--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,12 @@ target
 *.dist
 main.app/
 *.dmg
+*.tar.xz
+*.tar
 .DS_Store
 src/main/python/console_resources.py
 *.*~
 py39-dist/
 py39/
-py39-dist.tar.xz
 dist/
 console_backend/tests/fileout.json
