--- a/Makefile.toml
+++ b/Makefile.toml
@@ -3,9 +3,11 @@ env_scripts = ['''
 os = os_family
 if eq ${os} windows
   set_env PYTHON "${WORKSPACE}\\py39\\python.exe"
+  set_env DIST_PYTHON "${WORKSPACE}\\py39-dist\\python"
   set_env PYSIDE2_RCC "${WORKSPACE}\\py39\\Lib\\site-packages\\PySide2\\rcc.exe"
 else
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
+  set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
   set_env PYSIDE2_RCC "${WORKSPACE}/py39/bin/pyside2-rcc"
 end
 ''']
@@ -228,53 +230,80 @@ script_extension = "ps1"
 script = "& ./scripts/build-dist.ps1"
 
 [tasks.purge-dist]
-script = { file = "${WORKSPACE}/scripts/purge-dist.sh", absolute_path = true }
+cwd = "py39-dist"
+script_runner = "@duckscript"
+script = '''
+os = os_family
+if eq ${os} windows
+  mv Scripts/swiftnav-console.exe .
+  rm -r Scripts
+  mv ./swiftnav-console.exe ./Scripts/swiftnav-console.exe
+else
+  rm -r ./share
+  mv bin/swiftnav-console .
+  rm -r bin
+  mv ./swiftnav-console ./bin/swiftnav-console
+end
 
-[tasks.purge-dist.windows]
-script_runner = "powershell"
-script_extension = "ps1"
-script = "& ./scripts/purge-dist.ps1"
+py_folders = array test tests examples __pycache__
+qt_folders = array plugins/virtualkeyboard lib/Tix8.4.3
+
+all_folders = array_concat ${py_folders} ${qt_folders}
+for name in ${all_folders}
+    folders = glob_array "**/${name}/"
+    for folder in ${folders}
+        echo ${folder}
+        rm -r ${folder}
+    end
+end
+
+file_exts = array pyc pyi pdb tcl gif
+for ext in ${file_exts}
+    files = glob_array "**/*.${ext}"
+    for file in ${files}
+        echo ${file}
+        rm ${file}
+    end
+end
+
+exec --fail-on-error ${DIST_PYTHON} -m pip uninstall -y pip setuptools wheel
+exec --fail-on-error ${DIST_PYTHON} -m compileall -b -f -o 1 -o 2 .
+
+files = glob_array "*.py"
+for file in ${files}
+    echo ${file}
+    rm ${file}
+end
+'''
 
 [tasks.compress-dist]
+env = { ARCHIVE_NAME = "console_pp" }
+script_runner = "@shell"
 script = '''
-#!/usr/bin/env bash
 set -ex
-tar -cvf ./py39-dist.tar ./py39-dist
-rm -f ./py39-dist.tar.xz
-xz -e -9 ./py39-dist.tar
+DATE="$(date '+%Y-%m-%d')"
+VERSION="$(git describe --always --tags --dirty)"
+BUILD_TRIPLET="$(gcc -dumpmachine)"
+OUTPUT_NAME="${ARCHIVE_NAME}-${VERSION}-${BUILD_TRIPLET}-${DATE}"
+tar -cvf ./${OUTPUT_NAME}.tar ./py39-dist
+rm -f ./${OUTPUT_NAME}.tar.xz
+xz -e -9 ./${OUTPUT_NAME}.tar
 '''
 
 [tasks.compress-dist.windows]
-script_runner = "powershell"
-script_extension = "ps1"
 script = '''
-tar -C ".\py39-dist" -cvf ".\py39-dist.tar" .
-Remove-Item -ErrorAction SilentlyContinue "py39-dist.tar.xz"
-xz -e -9 ".\py39-dist.tar"
+set -ex
+DATE="$(date '+%Y-%m-%d')"
+VERSION="$(git describe --always --tags)"
+BUILD_TRIPLET="x86_64-pc-windows-msvc"
+OUTPUT_NAME = "${ARCHIVE_NAME}-${VERSION}-windows-${BUILD_TRIPLET}-${DATE}"
+tar -C ".\py39-dist" -cvf ".\${OUTPUT_NAME}.tar" .
+rm -f "${OUTPUT_NAME}.tar.xz"
+xz -e -9 ".\${OUTPUT_NAME}.tar"
 '''
 
 [tasks.create-dist]
-dependencies = ["build-dist", "purge-dist", "compress-dist"]
-
-[tasks.prod-installer]
-dependencies = [
-  "setup-builder",
-  "store-version",
-  "copy-capnp",
-  "generate-resources",
-  "create-dist",
-]
-
-[tasks.prod-installer.mac]
-script_runner = "@shell"
-script = '''
-mkdir -p main.app/Contents/MacOS main.app/Contents/Resources
-cp -r main.dist/* main.app/Contents/MacOS/
-iconutil --convert icns src/main/icons/Mac.iconset
-mv src/main/icons/Mac.icns main.app/Contents/Resources/SwiftNavConsole.icns
-${PYTHON} src/build/generate-mac-info-plist.py
-hdiutil create -volname SwiftNavConsole -srcfolder main.app -ov -format UDZO 'swift_navigation_console.dmg' || (echo 'Failed to create Mac dmg. Retrying in 10s...' && sleep 10 && hdiutil create -volname SwiftNavConsole -srcfolder main.app -ov -format UDZO 'swift_navigation_console.dmg' )
-'''
+run_task = [{ name = ["build-dist", "purge-dist", "compress-dist"] }]
 
 [tasks.qml-format]
 dependencies = ["set-qml-files"]
@@ -353,12 +382,14 @@ dependencies = ["cargo-make-deps-update", "format-toml"]
 run_task = "check-git-diff"
 
 [tasks.format-all]
-dependencies = [
-  "python-format-all",
-  "qml-format",
-  "rust-format",
-  "newline-format",
-  "format-toml",
+run_task = [
+  { name = [
+    "python-format-all",
+    "qml-format",
+    "rust-format",
+    "newline-format",
+    "format-toml",
+  ], parallel = true },
 ]
 
 [tasks.format]
